--- a/MySchool/packages.config
+++ b/MySchool/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="6.5.1" targetFramework="net472" />
   <package id="Guna.UI2.WinForms" version="2.0.4.6" targetFramework="net472" />
+  <package id="Microsoft.EntityFrameworkCore.Tools" version="9.0.0-preview.7.24405.3" targetFramework="net472" developmentDependency="true" />
 </packages>
