--- a/MySchool/MySchool.csproj
+++ b/MySchool/MySchool.csproj
@@ -93,6 +93,9 @@
     <Compile Include="Forms\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
+    <Compile Include="Grades.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Guardians.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -168,6 +171,18 @@
     <Compile Include="userControl\userControlStages.Designer.cs">
       <DependentUpon>userControlStages.cs</DependentUpon>
     </Compile>
+    <Compile Include="userControl\UserControlSubjects.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="userControl\UserControlSubjects.Designer.cs">
+      <DependentUpon>UserControlSubjects.cs</DependentUpon>
+    </Compile>
+    <Compile Include="userControl\UserControlTeachers.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="userControl\UserControlTeachers.Designer.cs">
+      <DependentUpon>UserControlTeachers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Users.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -204,6 +219,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="userControl\userControlStages.resx">
       <DependentUpon>userControlStages.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="userControl\UserControlSubjects.resx">
+      <DependentUpon>UserControlSubjects.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="userControl\UserControlTeachers.resx">
+      <DependentUpon>UserControlTeachers.cs</DependentUpon>
     </EmbeddedResource>
     <EntityDeploy Include="Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
