add teatcher all oprations

--- a/MySchool/MySchool.csproj
+++ b/MySchool/MySchool.csproj
@@ -173,6 +173,12 @@
     <Compile Include="userControl\userControlStages.Designer.cs">
       <DependentUpon>userControlStages.cs</DependentUpon>
     </Compile>
+    <Compile Include="userControl\UserControlTeachers.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="userControl\UserControlTeachers.Designer.cs">
+      <DependentUpon>UserControlTeachers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Users.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -209,6 +215,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="userControl\userControlStages.resx">
       <DependentUpon>userControlStages.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="userControl\UserControlTeachers.resx">
+      <DependentUpon>UserControlTeachers.cs</DependentUpon>
     </EmbeddedResource>
     <EntityDeploy Include="Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
