new_main branch

--- a/MySchool/App.config
+++ b/MySchool/App.config
@@ -10,8 +10,8 @@
   </startup>
 	
   <connectionStrings>
-	  <add name="SchoolDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-I31TB94;initial catalog=SchoolDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	  <add name="SchoolDB" connectionString="Data Source=DESKTOP-I31TB94;Initial Catalog=SchoolDB;Integrated Security=True;" providerName="System.Data.SqlClient" />
+	  <add name="SchoolDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Hazem;initial catalog=SchoolDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="SchoolDB" connectionString="Data Source=Hazem;Initial Catalog=SchoolDB;Integrated Security=True;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   <entityFramework>
