--- a/MySchool/MySchool.csproj
+++ b/MySchool/MySchool.csproj
@@ -149,6 +149,12 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="TOOLS_HELPER\tools.cs" />
+    <Compile Include="userControl\Reports\UserControlCertifcate.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="userControl\Reports\UserControlCertifcate.Designer.cs">
+      <DependentUpon>UserControlCertifcate.cs</DependentUpon>
+    </Compile>
     <Compile Include="userControl\UserControlAddStudent.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -160,6 +166,12 @@
     </Compile>
     <Compile Include="userControl\UserControlDashboard.Designer.cs">
       <DependentUpon>UserControlDashboard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="userControl\Reports\UserControlReports.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="userControl\Reports\UserControlReports.Designer.cs">
+      <DependentUpon>UserControlReports.cs</DependentUpon>
     </Compile>
     <Compile Include="userControl\UserControlStudents.cs">
       <SubType>UserControl</SubType>
@@ -210,11 +222,17 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="userControl\Reports\UserControlCertifcate.resx">
+      <DependentUpon>UserControlCertifcate.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="userControl\UserControlAddStudent.resx">
       <DependentUpon>UserControlAddStudent.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="userControl\UserControlDashboard.resx">
       <DependentUpon>UserControlDashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="userControl\Reports\UserControlReports.resx">
+      <DependentUpon>UserControlReports.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="userControl\UserControlStudents.resx">
       <DependentUpon>UserControlStudents.cs</DependentUpon>
@@ -276,6 +294,7 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
+    <None Include="Resources\الشعار.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
