--- a/MySchool/MySchool.csproj
+++ b/MySchool/MySchool.csproj
@@ -119,6 +119,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="MONTH.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Salarys.cs">
@@ -160,6 +163,12 @@
     </Compile>
     <Compile Include="userControl\UserControlDashboard.Designer.cs">
       <DependentUpon>UserControlDashboard.cs</DependentUpon>
+    </Compile>
+    <Compile Include="userControl\UserControlgrade.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="userControl\UserControlgrade.Designer.cs">
+      <DependentUpon>UserControlgrade.cs</DependentUpon>
     </Compile>
     <Compile Include="userControl\UserControlStudents.cs">
       <SubType>UserControl</SubType>
@@ -215,6 +224,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="userControl\UserControlDashboard.resx">
       <DependentUpon>UserControlDashboard.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="userControl\UserControlgrade.resx">
+      <DependentUpon>UserControlgrade.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="userControl\UserControlStudents.resx">
       <DependentUpon>UserControlStudents.cs</DependentUpon>
