--- a/MySchool/App.config
+++ b/MySchool/App.config
@@ -10,8 +10,8 @@
   </startup>
 	
   <connectionStrings>
-	  <add name="SchoolDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-I31TB94;initial catalog=SchoolDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-	  <add name="SchoolDB" connectionString="Data Source=DESKTOP-I31TB94;Initial Catalog=SchoolDB;Integrated Security=True;" providerName="System.Data.SqlClient" />
+	  <add name="SchoolDBEntities" connectionString="metadata=res://*/Model1.csdl|res://*/Model1.ssdl|res://*/Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=Hazem\SQLEXPRESS01;initial catalog=SchoolDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	  <add name="SchoolDB" connectionString="Data Source=Hazem\SQLEXPRESS01;Initial Catalog=SchoolDB;Integrated Security=True;" providerName="System.Data.SqlClient" />
 
   </connectionStrings>
   <entityFramework>
@@ -24,4 +24,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
